# genanki-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  requirements.txt
.github/workflows/: release.yml  rust.yml
check24/: Cargo.toml
check24/src/: lib.rs  main.rs
check24/src/crawlers/: asaka_crawler.rs  azia_aliance_crawler.rs  azia_alliance_crawler.rs  credit.rs  mod.rs  text_helpers.rs
check24/tests/: asaka_crawler_tests.rs  asia_alliance_crawler_tests.rs
check24/tests/stubs/asaka/: asaka-credits-list.json  asaka-credits-property-33.json  asaka-credits-property-4.json  asaka-credits-property-60.json  asaka-credits-property-61.json  asaka-credits-property-7.json  asaka-credits-property-8.json  asaka-result.json
check24/tests/stubs/asia_alliance/: asia-alliance-result.json  asia_alliance.html
genanki-rs/: .env  Cargo.toml  anki.db  test.py
genanki-rs/migrations/: 20250612143305_init_db.sql
genanki-rs/src/: builtin_models.rs  card.rs  db_entries.rs  deck.rs  error.rs  lib.rs  model.rs  note.rs  package.rs  util.rs
genanki-rs/src/builders/: field.rs  template.rs
genanki-rs/src/fixtures/: anki.sql
goethe-wortliste-b1/: .env  Cargo.toml  all_b1.html  wortlist.sqlite
goethe-wortliste-b1/src/: main.rs
goethe-wortliste-b1/src/anki/: minimal.css  mod.rs  template-a-r.html  template-a.html  template-q-r.html  template-q.html
goethe-wortliste-b1/src/db/: mod.rs
goethe-wortliste-b1/src/deepl/: mod.rs
goethe-wortliste-b1/src/google/: mod.rs
goethe-wortliste-b1/src/openai/: mod.rs
goethe-wortliste-b1/src/utils/: mod.rs
imgur-wallpaper/: Cargo.toml
imgur-wallpaper/src/: data.rs  main.rs  simple_logger.rs
rust2prod/: Cargo.toml
rust2prod/.sqlx/: query-04c648d024ebad821c8ddacdfbd953d28ed435e13a03c31b40fa8767d44f9f2f.json
rust2prod/migrations/: 20230302212231_create_subscriptions_table.down.sql  20230302212231_create_subscriptions_table.sql  20230302212231_create_subscriptions_table.up.sql
rust2prod/src/: configuration.rs  lib.rs  main.rs
rust2prod/src/routes/: subscriptions.rs
rust2prod/tests/: health_check.rs
src/: lib.rs  main.rs
tests/: health_check.rs
