[package]
name = "check24uz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
scraper = { version = "0.14" }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
pretty_env_logger = "0.5.0"

[dev-dependencies]
mockito = "0.32"
futures = "0.3"
