[package]
name = "genanki-rs"
version = "0.4.0"
authors = ["Yannick Funk <yannickfunk@yahoo.de>"]
edition = "2024"
description = "Crate to create decks for the open source flashcard platform Anki. Based on Python library genanki"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yannickfunk/genanki-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2.0"
zip = "4.2.0"
serde_json = "1.0.64"
fancy-regex = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
ramhorns = "1.0.1"
thiserror = "2.0.12"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "macros",
  "migrate",
  "runtime-tokio",
] }
anyhow = "1.0.62"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
serial_test = "3.2.0"
uuid = { version = "1.17", features = ["v4"] }
