[package]
name = "deutsch-wortschatz-create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.18" }
serde_json = { version = "1" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = { version = "0.13" }
sqlite = "0.32.0"
sha256 = "1.4.0"
regex = "1.10.2"
