[package]
name = "deutsch-wortschatz-create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.18" }
serde_json = { version = "1" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = { version = "0.13" }
regex = "1.10.2"
sql_query_builder = { version = "2.1.0", features = ["sqlite"] }
genanki-rs = "0.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
clap = { version = "4.4.16", features = ["derive"] }
indicatif = "0.17.7"

[patch.crates-io]
genanki-rs = { git = "https://github.com/mufasa71/genanki-rs", branch = "sql-version"}
