[package]
name = "deutsch-wortschatz-create"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.23.1" }
serde_json = { version = "1" }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
base64 = { version = "0.22.1" }
regex = "1.10.2"
sql_query_builder = { version = "2.1.0", features = ["sqlite"] }
clap = { version = "4.4.16", features = ["derive"] }
indicatif = "0.17.7"
sqlx = { version = "0.8.6", features = ["sqlite"] }
anyhow = "1.0.98"
genanki-rs = { path = "../genanki-rs" }
dotenv = "0.15.0"
