[package]
name = "imgur-wallpaper"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.18", features = [
  "json",
  "rustls-tls",
], default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1" }
simple_logger = { version = "5.0.0" }
urlencoding = { version = "2.1.3" }
log = { version = "0.4.27" }
regex = "1.10.2"
image = "0.25.6"
dirs = "6.0.0"
clap = { version = "4.5.39", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
